# mountaineer-auth

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.test.yml  pyproject.toml
.github/workflows/: test.yml
example-app/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
example-app/example_app/: __init__.py  app.py  bootstrap.py  cli.py  config.py  constants.py  emails.py  fastapi_compat.py  postcss_compat.py
example-app/example_app/__tests__/: conftest.py  test_auth_poc.py
example-app/example_app/controllers/: __init__.py  auth.py  detail.py  home.py
example-app/example_app/models/: __init__.py  auth.py  detail.py
example-app/example_app/views/: package-lock.json  package.json
example-app/example_app/views/app/auth/login/: page.tsx
example-app/example_app/views/app/detail/: page.tsx
example-app/example_app/views/app/home/: page.tsx
example-app/example_app/views/emails/welcome_preview/: page.tsx
example-app/example_app/views/scripts/: link-postcss-bin.mjs
mountaineer_auth/: __init__.py  authorize.py  cli.py  compat.py  config.py  exceptions.py  models.py  plugin.py  recaptcha.py
mountaineer_auth/__tests__/: conf_models.py  conftest.py  test_authorize.py  test_compat.py  test_recaptcha.py  test_send_auth_email_workflow.py
mountaineer_auth/__tests__/controllers/: test_login_controller.py  test_signup_controller.py  test_verify_controller.py
mountaineer_auth/__tests__/dependencies/: test_core.py
mountaineer_auth/controllers/: __init__.py  forgot_password_controller.py  login_controller.py  logout_controller.py  signup_controller.py  verify_controller.py
mountaineer_auth/dependencies/: __init__.py  core.py
mountaineer_auth/emails/: __init__.py  common.py  forgot_password_email.py  verify_email.py
mountaineer_auth/views/: package-lock.json  package.json  tsconfig.json
mountaineer_auth/views/auth/: components.tsx  main.css  recaptcha.ts
mountaineer_auth/views/auth/forgot_password/: page.tsx
mountaineer_auth/views/auth/login/: page.tsx
mountaineer_auth/views/auth/logout/: page.tsx
mountaineer_auth/views/auth/signup/: page.tsx
mountaineer_auth/views/auth/verify/: forgot_password.tsx  initial_verification.tsx  page.tsx
mountaineer_auth/views/emails/: common_wrapper.tsx
mountaineer_auth/views/emails/forgot_password/: page.tsx
mountaineer_auth/views/emails/verify_email/: page.tsx
mountaineer_auth/workflows/: __init__.py  send_auth_email.py
